--- a/_includes/base.html
+++ b/_includes/base.html
@@ -1,12 +1,35 @@
 ---
 site: CPSC 349 - Fall 2022 - Project 1
 ---
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>{{ title }} - {{ site }}</title>
+        <link rel="stylesheet" href="https://unpkg.com/mvp.css">
+    </head>
 
-<head>
-    <title>{{ title }} - {{ site }}</title>
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
-</head>
+    <body>
+        <!-- Nav -->
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="pictures">Collection</a></li>
+                <li><a href="pictures">About Us</a></li>
+            </ul>
+        </nav>
+        <!-- End Nav -->
 
-<body>
-    {{ content }}
-</body>
+        {{ content }}
+        
+        <!-- Footer -->
+        <footer>
+            <hr>
+            <p>
+                <small>
+                    <a href="https://www.pexels.com">Photos provided by Pexels</a>
+                </small>
+            </p>
+        </footer>
+        <!-- End Footer -->
+    </body>
+</html>
