--- a/_includes/base.html
+++ b/_includes/base.html
@@ -13,14 +13,14 @@ site: CPSC 349 - Fall 2022 - Project 1
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="pictures">Collection</a></li>
-                <li><a href="pictures">About Us</a></li>
+                <li><a href="collection">Collection</a></li>
+                <li><a href="aboutus">About Us</a></li>
             </ul>
         </nav>
         <!-- End Nav -->
 
         {{ content }}
-        
+
         <!-- Footer -->
         <footer>
             <hr>
