changes to pictures page

--- a/_includes/pictures.html
+++ b/_includes/pictures.html
@@ -21,7 +21,10 @@ site: Image Page
 
         {{ content }}
 
-        <h1>Photographer: {{ image.photographer }}</h1>
+        <center>
+            <h1>Photographer: {{ image.photographer }}</h1>
+            <h3>{{ image.alt }}</h3>
+        </center>
         
         <!-- Footer -->
         <footer>
