--- a/_includes/base.html
+++ b/_includes/base.html
@@ -12,9 +12,9 @@ site: CPSC 349 - Fall 2022 - Project 1
         <!-- Nav -->
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="collection">Collection</a></li>
-                <li><a href="aboutus">About Us</a></li>
+                <li><a href="/cpsc349-project1">Home</a></li>
+                <li><a href="/cpsc349-project1/collection">Collection</a></li>
+                <li><a href="/cpsc349-project1/aboutus">About Us</a></li>
             </ul>
         </nav>
         <!-- End Nav -->
