working on my when running browser sync, but vscode gives problems on property value expected and at-rule or selector expected

--- a/_includes/pictures.html
+++ b/_includes/pictures.html
@@ -9,7 +9,7 @@ site: Image Page
         
     </head>
     
-    <body>
+    <body style="background-color: {{image.avg_color}};">
         <!-- Nav -->
         <nav>
             <ul>
@@ -25,6 +25,7 @@ site: Image Page
         <center>
             <h1>Photographer: {{ image.photographer }}</h1>
             <h3>{{ image.alt }}</h3>
+            <h2>{{ image.avg_color }}</h2>
              
         </center>
         
